css/default.scss
html, body {
  margin: 0;
  padding: 0;
}

p {
  font: 12px sans-serif, serif;
}

.body ul {
  font: 12px sans-serif, serif;
}

@media screen and (min-width: 958px) {
  .row {
    display: grid;
    grid-template-columns: 50% 50%;
    max-width: 960px;
    margin: auto;

    height: inherit;
    max-height: inherit;
  } 

  code, .code {
    font: 12px monospace, sans-serif, serif;
    min-width: 0;
  }
}

.logol {
  text-decoration: none;
  font-size: auto;
}

.topnav {
  background-color: #333;
  justify-content: center;
  align-content: center;
  overflow: hidden;
  font-family: serif monospace;
}

.topnav .icon {
  display: none;
}

.topnav a {
  border-right: 1px solid #251f2b;
  float: left;
  display: block;
  color: #f0e8ff;
  text-align: center;
  padding: 14px 16px;
  text-decoration: none;
  font-size: 12px;
}

.topnav a:hover, .toc-dropdown:hover .toc-btn {
  background-color: #251f2b;
}

.topnav ul {
  list-style-type: none;
  margin: 0;
  padding: 0;
  overflow: hidden;
  background-color: #333;
}

.topnav ul li {float: left;}

.topnav ul li a {
  display: block;
  color: white;
  text-align: center;
  padding: 14px 16px;
  text-decoration: none;
}

.toc-dropdown {
  border-right: 1px solid #251f2b;
  float: left;
  overflow: hidden;
}

.toc-dropdown .toc-btn {
  font-size: 12px;
  border: none;
  color: white;
  padding: 14px 16px;
  background-color: inherit;
  font-family: inherit;
  margin: 0;
}

.toc {
  display: none;
  position: absolute;
  background-color: #333;
  min-width: 160px;
  z-index: 1;
}

.toc a {
  float: none;
  color: white;
  padding: 2px 8px;
  font-family:monospace;
  text-decoration: none;
  display: block;
  text-align: left;
}

.toc a:hover {
  background-color: #251f2b;
}

.toc-dropdown:hover .toc {
  display: block;
}

@media screen and (max-width: 957px) {
  .row {
    display: flex;
    flex-direction: column;
  }

  .tour-text {
    flex: 1;
  }

  code, .code {
    font: 12px monospace, sans-serif, serif;
    flex: 1;
  }

  .pagenav {
    display: none;
  }

  .logo, .logol {
    display: none;
  }

  .topnav .toc-btn {
    float: right;
    display: block;
  }

  .topnav {position: relative;}
  .topnav a.icon {
    position: absolute;
    right: 0;
    top: 0;
  }
  .topnav a {
    float: none;
    display: block;
    text-align: left;
  }
  .topnav .toc-dropdown {float: none;}
  .topnav .toc {position: relative;}
  .topnav .toc-dropdown .toc-btn {
    display: inline-block;
    width: 100%;
    text-align: left;
  }
}

